
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int s_in ;


 int AF_INET ;
 int SOCK_STREAM ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int errno ;
 int exit (int) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;
 char* strerror (int ) ;

int connect_host(char* host, int port)
{
 struct sockaddr_in s_in;
 int sock;

 s_in.sin_family = AF_INET;
 s_in.sin_addr.s_addr = inet_addr(host);
 s_in.sin_port = htons(port);

 if ((sock = socket(AF_INET, SOCK_STREAM, 0)) <= 0) {
  printf("Could not create a socket\n");
  exit(1);
 }

 if (connect(sock, (struct sockaddr *)&s_in, sizeof(s_in)) < 0) {
  printf("Connection to %s:%d failed: %s\n", host, port, strerror(errno));
  exit(1);
 }

 return sock;
}
